--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -37,6 +37,29 @@
             "type": "coreclr",
             "request": "attach",
             "processId": "${command:pickProcess}"
+        },
+        {
+                "name": ".NET Core Launch (Blazor Standalone)",
+                "type": "coreclr",
+                "request": "launch",
+                "program": "dotnet",
+                "args": [
+                    "run"
+                ],
+                "cwd": "${workspaceFolder}/HelloWorld",
+                "env": {
+                    "ASPNETCORE_ENVIRONMENT": "Development"
+                }
+        },
+        {
+                "name": ".NET Core Debug Blazor Web Assembly in Chrome",
+                "type": "pwa-chrome",
+                "request": "launch",
+                "timeout": 30000,
+                "url": "https://localhost:5001",
+                "webRoot": "${workspaceFolder}/HelloWorld",
+                "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}"
+                
         }
     ]
 }
