updating debug config to use Edge

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -52,8 +52,8 @@
                 }
         },
         {
-                "name": ".NET Core Debug Blazor Web Assembly in Chrome",
-                "type": "pwa-chrome",
+                "name": ".NET Core Debug Blazor Web Assembly in Edge",
+                "type": "pwa-msedge",
                 "request": "launch",
                 "timeout": 30000,
                 "url": "https://localhost:5001",
